# Virtual-Requirements-Buddy

./: .dockerignore  README.md  app.py  chainlit.md  dockerfile  prompts.py  pyproject.toml  requirements.txt  tools.py
.chainlit/: config.toml
.files/1e9114da-a8f7-4cd0-acea-a093a406afeb/: 94c9ec9d-c306-4678-bc1d-ca9341c6d2c9
.files/6e0f56b5-6e8d-498d-9b3e-0dc18d8908d6/: 56236a59-baff-432a-a93d-368e18032c2a.md  9d632a3e-3917-4a69-919a-1e9ab7593256.md
public/: test.css
